--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,31 +1,33 @@
 @use "@angular/material" as mat;
+@use "./styles/base/reset" as *;
 
+// Include Angular Material core styles and apply theme
 html {
+  @include mat.core();
+
   @include mat.theme(
     (
       color: (
         primary: mat.$azure-palette,
         tertiary: mat.$blue-palette,
       ),
-      typography: Roboto,
+      typography: mat.define-typography-config(),
       density: 0,
     )
   );
 }
 
+// Body styling
 body {
   color-scheme: light;
   background-color: var(--mat-sys-surface);
   color: var(--mat-sys-on-surface);
   font: var(--mat-sys-body-medium);
-  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
 }
 
+// Ensure full height layout
 html,
 body {
   height: 100%;
-}
-body {
-  margin: 0;
-  font-family: Roboto, "Helvetica Neue", sans-serif;
 }
