--- a/src/app/layout/header/header.scss
+++ b/src/app/layout/header/header.scss
@@ -1,8 +1,8 @@
 @use "../../../styles/tokens/breakpoints" as *;
 
 .header {
-  background-color: var(--mat-sys-primary);
-  box-shadow: 0 0.5rem 1rem var(--box-shadow);
+  background-color: var(--color-primary);
+  box-shadow: 0 0.125rem 0.375rem var(--color-shadow);
   position: sticky;
   top: 0;
   padding: 1rem 5rem;
@@ -12,7 +12,7 @@
   }
 
   h1 {
-    color: var(--mat-sys-surface);
+    color: var(--color-text-primary);
     cursor: pointer;
   }
 }
