--- a/src/app/pages/users/users.html
+++ b/src/app/pages/users/users.html
@@ -1,1 +1,28 @@
-<p>users works!</p>
+<section class="users">
+  <div class="users__search">
+    <mat-form-field class="users__search-input" appearance="outline">
+      <mat-label>Search users by ID</mat-label>
+      <input matInput [formControl]="search" />
+    </mat-form-field>
+  </div>
+
+  @if(!usersService.loading()) { @if (visibleUsers().length > 0) {
+  <div class="users__list">
+    @for (user of visibleUsers(); track user?.id) {
+    <app-user-card [user]="user!" />
+    }
+  </div>
+  } @else {
+  <p class="users__empty">No users found</p>
+  }} @if(!searchValue()) {
+  <mat-paginator
+    [length]="usersService.total()"
+    [pageSize]="usersService.pageSize()"
+    [pageIndex]="usersService.currentPage() - 1"
+    [hidePageSize]="true"
+    [showFirstLastButtons]="false"
+    aria-label="Pagination control"
+    (page)="onPageChange($event)"
+  ></mat-paginator>
+  }
+</section>
