--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,25 +1,23 @@
 @use "@angular/material" as mat;
-@use "./styles/base/reset" as *;
+@use "./styles/theme/theme-colors" as my-theme;
+@use "./styles/tokens/root-colors";
+@use "./styles/base/reset";
 
 html {
-  @include mat.core();
-
   @include mat.theme(
     (
       color: (
-        primary: mat.$azure-palette,
-        tertiary: mat.$blue-palette,
+        primary: my-theme.$primary-palette,
+        tertiary: my-theme.$tertiary-palette,
       ),
-      density: 0,
     )
   );
 }
 
 body {
-  color-scheme: light;
-  background-color: var(--mat-sys-surface);
-  color: var(--mat-sys-on-surface);
-  font: var(--mat-sys-body-medium);
+  background-color: var(--color-background);
+  color: var(--color-text-primary);
+  font-size: 1rem;
   font-family: Roboto, "Helvetica Neue", sans-serif;
 }
 
