--- a/src/app/pages/users/users.html
+++ b/src/app/pages/users/users.html
@@ -1,3 +1,4 @@
+<app-loading-bar [loading]="usersService.loading()"></app-loading-bar>
 <section class="users">
   <div class="users__search">
     <mat-form-field class="users__search-input" appearance="outline">
