added user details

--- a/src/app/pages/users/users.scss
+++ b/src/app/pages/users/users.scss
@@ -19,9 +19,10 @@
   }
 
   &__list {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(17rem, 1fr));
-    gap: 1rem;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 16px;
   }
 
   &__empty {
