--- a/src/app/shared/components/user-card/user-card.scss
+++ b/src/app/shared/components/user-card/user-card.scss
@@ -6,7 +6,7 @@
   box-shadow: 0 0.125rem 0.375rem var(--color-shadow);
   padding: 1rem;
   gap: 1rem;
-  width: 100%;
+  width: 18rem;
 
   &__avatar {
     width: 3.5rem;
