--- a/src/app/pages/users/users.html
+++ b/src/app/pages/users/users.html
@@ -10,7 +10,7 @@
   @if(!usersService.loading()) { @if (visibleUsers().length > 0) {
   <div class="users__list">
     @for (user of visibleUsers(); track user?.id) {
-    <app-user-card [user]="user!" />
+    <app-user-card (cardClick)="navigateToUserDetails(user)" [user]="user!" />
     }
   </div>
   } @else {
