--- a/src/app/shared/components/user-card/user-card.html
+++ b/src/app/shared/components/user-card/user-card.html
@@ -1,8 +1,9 @@
-<div class="user-card">
+<div class="user-card" (click)="cardClick.emit()">
   <img
     class="user-card__avatar"
     [src]="user().avatar"
     alt="{{ user().first_name }} {{ user().last_name }} avatar"
+    loading="lazy"
   />
   <div class="user-card__info">
     <div class="user-card__name">
