--- a/src/app/pages/user-details/user-details.scss
+++ b/src/app/pages/user-details/user-details.scss
@@ -19,7 +19,8 @@
   }
 
   &__avatar {
-    width: 50%;
+    width: 6rem;
+    height: 6rem;
     border-radius: 50%;
     object-fit: cover;
     border: 2px solid var(--color-primary);
